// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`astToReact util fixture clike 1`] = `
<pre>
  int 
  <span
    className="token function"
    data-node-index={1}
    key="cv-0-1"
  >
    main
  </span>
  <span
    className="token punctuation"
    data-node-index={2}
    key="cv-0-2"
  >
    (
  </span>
  <span
    className="token punctuation"
    data-node-index={3}
    key="cv-0-3"
  >
    )
  </span>
   
  <span
    className="token punctuation"
    data-node-index={5}
    key="cv-0-5"
  >
    {
  </span>
  
  
  <span
    className="token comment"
    data-node-index={7}
    key="cv-0-7"
  >
    // some dumb code
  </span>
  
  
  <span
    className="token keyword"
    data-node-index={9}
    key="cv-0-9"
  >
    return
  </span>
   
  <span
    className="token number"
    data-node-index={11}
    key="cv-0-11"
  >
    0
  </span>
  <span
    className="token punctuation"
    data-node-index={12}
    key="cv-0-12"
  >
    ;
  </span>
  

  <span
    className="token punctuation"
    data-node-index={14}
    key="cv-0-14"
  >
    }
  </span>
</pre>
`;

exports[`astToReact util fixture javascript 1`] = `
<pre>
  <span
    className="token keyword"
    data-node-index={0}
    key="cv-0-0"
  >
    const
  </span>
   defaultValue 
  <span
    className="token operator"
    data-node-index={2}
    key="cv-0-2"
  >
    =
  </span>
   stoplight
  <span
    className="token punctuation"
    data-node-index={4}
    key="cv-0-4"
  >
    .
  </span>
  <span
    className="token function"
    data-node-index={5}
    key="cv-0-5"
  >
    io
  </span>
  <span
    className="token punctuation"
    data-node-index={6}
    key="cv-0-6"
  >
    (
  </span>
  <span
    className="token punctuation"
    data-node-index={7}
    key="cv-0-7"
  >
    )
  </span>
  <span
    className="token punctuation"
    data-node-index={8}
    key="cv-0-8"
  >
    ;
  </span>
</pre>
`;
